# plan-charge-v11b

./: .env  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHENTICATION_FIXES.md  AUTHENTICATION_STATUS.md  AZURE_ENTRA_CONFIG_GUIDE.md  AZURE_SSO_TROUBLESHOOTING.md  COMPREHENSIVE_DATABASE_FIX.md  CRITICAL_FIXES.md  DEPLOYMENT.md  EXECUTE_DATABASE_FIX.md  EXECUTE_NOW_VIA_CONSOLE.md  EXECUTE_THIS_SQL_NOW.sql  FINAL_500_ERROR_FIX.md  FINAL_COMPLETE_SSO_SOLUTION.md  FINAL_EXECUTION_SUMMARY.md  FINAL_SSO_TROUBLESHOOTING_GUIDE.md  FINAL_STATUS_AND_NEXT_STEPS.md  MANUAL_EXECUTION_GUIDE.md  Makefile  PAYFIT_MOCK_MODE_FIX.md  RDS_QUERY_EDITOR_INSTRUCTIONS.md  README.md  READY_FOR_MANUAL_EXECUTION.md  SSO_FIX_COMPLETE_GUIDE.md  SSO_FIX_SUCCESS_REPORT.md  SSO_FIX_SUCCESS_SUMMARY.md  SSO_SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  TR_ELIGIBILITY_FIX.md  add-default-organization.sql  azure-sso-config.json  cleanup-azure-sso.sh  comprehensive_lambda_fix.py  create-admin-user.sh  create_bastion_fix_sso.sh  create_production_schema.sql  (+17 more)
backend/: .env  .env.example  .github-test  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celerybeat-schedule  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 002_add_payfit_models.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  tasks.py  tasks_future.py.example
backend/app/middleware/: __init__.py  logging.py  rate_limiting.py  request_id.py
backend/app/models/: __init__.py  allocation.py  audit.py  base.py  benefit.py  calendar.py  forecast.py  gryzzly.py  integration.py  misc.py  organization.py  payfit.py  person.py  project.py  team.py  tr_eligibility.py
backend/app/schemas/: __init__.py  allocation.py  auth.py  base.py  calendar.py  gryzzly.py  organization.py  payfit.py  person.py  project.py  sso.py  team.py
backend/app/services/: azure_sso.py  gryzzly_client.py  gryzzly_mock.py  gryzzly_sync.py  payfit_client.py  payfit_sync.py  tr_service.py
backend/app/utils/: __init__.py  logging.py  pagination.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 20250115_add_azure_id_to_users.py  (+8 more)
backend/scripts/: CONNEXION_RDS_PRODUCTION.md  FINALISATION_MATRICULES.md  aws_commands_matricules.sh  execute_matricules_update.py  execute_sql_direct.sh  seed_data.py  update_matricules.sql  update_matricules_production.sql
backend/tests/: conftest.py  test_auth.py  test_health.py
(+188 files in other folders)
